Add double cats project description

--- a/index.html
+++ b/index.html
@@ -131,13 +131,29 @@
     <div class = "row">
       <div class= "col-xl-6 ">
           <div class = "past-proj">
-              <center>
-                  <h5> To be determined </h5>
-                  <p> Mentor: <i> Simona Paoli </i></p>
-              </center>
-              <p>
-                  To be determined ... although tentatively with an eye towards double categories!
-              </p>
+            <center>
+                <h5> Double categories in applied category theory </h5>
+                <p> Mentor: <i> Simona Paoli </i></p>
+            </center>
+            <p>
+              Bicategories and double categories (and their symmetric monoidal versions) have recently featured in applied category theory: for instance, structured cospans and decorated cospans have been used to model several examples, such as electric circuits, Petri nets and chemical reaction networks.
+           </p>
+            <p>
+                  An approach to bicategories and double categories is available in higher category theory through models that do not require a direct checking of the coherence axioms, such as the Segal-type models. We aim to revisit the structures used in applications in the light of these approaches, in the hope to facilitate the construction of new examples of interest in applications.                
+            </p>
+            <hr> </hr>
+            <center> <p> Associate Readings </p> </center>
+              <ul>
+                  <li>
+                      <a href = "https://arxiv.org/abs/1911.04630"> Structured cospans</a>. Baez and Courser 
+                  </li>
+                  <li>
+                    <a href="http://www.tac.mta.ca/tac//volumes/28/27/28-27.pdf">  A double categorical model of weak 2-categories</a>.   Paoli and Pronk
+                </li>
+                <li>
+                  <a href="https://www.springer.com/gp/book/9783030056735"> Simplicial Methods for Higher Categories: Segal-type Models of Weak n-Categories</a>.   Paoli
+              </li>
+              </ul>
           </div>
       </div>
 
