Add application info to home page

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <hr></hr>
     <section id = "2021">
     <h2> The Adjoint School 2021</h2>
+    <p> <a href = "apply.html"> Applications are now open! </a> Application deadline: Friday, January 29, 2021, 23:59 (anywhere on Earth).</p>
     <p>The organizers of Adjoint School 2021 are David Jaz Myers, Sophie Libkind, and Brendan Fong.</p>
-
 
     </div>
 
