Fixed Elliott's name

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <a href="http://arxiv.org/abs/1501.03791"> The Legendre-Fenchel transform from a category theoretic perspective</a>.   Willerton
                     </li>
                     <li>
-                      <a href="https://etheses.whiterose.ac.uk/18342/1/JAE%20thesis%20%28White%20Rose%29.pdf">  On the fuzzy concept complex (Chapters 2-3)</a>.   Elliot 
+                      <a href="https://etheses.whiterose.ac.uk/18342/1/JAE%20thesis%20%28White%20Rose%29.pdf">  On the fuzzy concept complex (Chapters 2-3)</a>.   Elliott 
                   </li>
                 </ul>
 
