--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <div class = "past-proj">
                 <center>
                     <h5> Categorical and computational aspects of C-sets </h5>
-                    <p> Mentors: <i>  James Fairbanks</i> and <i> Evan Patterson</i></p>
+                    <p> Mentors: <i>  James Fairbanks</i> and <i> Evan Patterson</i>
+                    <br> TAs: <i>Owen Lynch and Christian Williams </i></p>
                 </center>
                 <p>
                     Applied category theory includes major threads of inquiry into monoidal categories and hypergraph categories for describing systems in terms of processes or networks of interacting components. Structured cospans are an important class of hypergraph categories. For example, Petri net-structured cospans are models of concurrent processes in chemistry, epidemiology, and computer science. When the structured cospans are given by C-sets (also known as co-presheaves), generic software can be implemented using the mathematics of functor categories. We will study mathematical and computational aspects of these categorical constructions, as well as applications to scientific computing.
@@ -103,7 +104,8 @@
             <div class = "past-proj">
                 <center>
                     <h5>The ubiquity of enriched profunctor nuclei </h5>
-                    <p> Mentor: <i> Simon Willerton </i></p>
+                    <p> Mentor: <i> Simon Willerton </i>
+                    <br> TA: <i>Tai-Danae Bradley</i></p>
                 </center>
                 <p>
                     In 1964, Isbell developed a nice universal embedding for metric spaces: the tight span. In 1966, Isbell developed a duality for presheaves. These are both closely related to enriched profunctor nuclei, but the connection wasn’t spotted for 40 years. Since then, many constructions in mathematics have been observed to be enriched profunctor nuclei too, such as the fuzzy/formal concept lattice, tropical convex hull, and the Legendre-Fenchel transform. 
