--- a/apply.html
+++ b/apply.html
@@ -49,10 +49,7 @@
 
     <h1>Apply</h1>
 
-    <p>Applications for the 2021 Adjoint School are now open! Apply by completing the <a href = "https://docs.google.com/forms/d/e/1FAIpQLSdGpPmsQlbNPCzCeTwHJX73t6dLn1ozfzyXiCMFaKba7O8HOQ/viewform?usp=sf_link"> application form</a>.</p>
-    <p> <b> Deadline:</b> Friday, January 29, 2021, 23:59 (anywhere on Earth).</p>
-    <p> You can find the project descriptions for the 2021 Adjoint School <a href = "index.html#2021">here</a>.</p>
-
+    <p>Applications for the 2021 Adjoint School are now closed!</p>
     <h3>Information regarding the letter of reference.</h3>
     <p>If you are applying, please have sent on your behalf to actadjointschool@gmail.com a brief letter of recommendation confirming any of the following:
       <ul>
