adjust dates and TA expectations

--- a/apply.html
+++ b/apply.html
@@ -49,8 +49,8 @@
 
     <h1>Apply</h1>
 
-    <p>Applications for the 2021 Adjoint School are now closed!</p>
-    <h3>Information regarding the letter of reference.</h3>
+    <p>Applications for the 2021 Adjoint School are now closed! We will be in touch with all applicants by the end of February.</p>
+    <!-- <h3>Information regarding the letter of reference.</h3>
     <p>If you are applying, please have sent on your behalf to actadjointschool@gmail.com a brief letter of recommendation confirming any of the following:
       <ul>
         <li> Your background</li>
@@ -58,7 +58,7 @@
         <li> Your research or career experience</li>
       </ul>
      If your reference letter won't arrive by the deadline, please have it sent in as soon as possible for the best chance of it being available when decisions are made, and send us contact information for your referee.
-     </p> 
+     </p>  -->
     <hr></hr>
     <div class="row">
 
