--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <hr></hr>
     <section id = "2021">
     <h2> The Adjoint School 2021</h2>
-    <p>The organizers of Adjoint School 2021 are David Jaz Myers, Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</p>
+    <p>The organizers of Adjoint School 2021 are David Jaz Myers and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</p>
 
     </div>
 
