change cospan paper

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <center> <p> Associated Readings </p> </center>
 
                 <ul>
-                    <li> <a href = "https://arxiv.org/abs/1911.04630"> Structured cospans</a>. Baez and Courser </li>
+                    <li> <a href = "https://arxiv.org/abs/1502.00872"> Decorated Cospans</a>. Fong </li>
                     <li><a href = "https://arxiv.org/abs/1408.1598"> An algebra of open dynamical systems on the operad of wiring diagrams</a>. Vagner, Spivak, and Lerman</li>
                 </ul>
 
