--- a/2019.html
+++ b/2019.html
@@ -157,7 +157,9 @@
                 <hr></hr>
                 <center> <p> Outcomes Following the Research Week </p> </center>
                 <ul>
-                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/2009.07302"> Partial Evaluations and the Compositional Structure of the Bar Construction </a>, <i>  Carmen Constantin, Paolo Perrone, Tobias Fritz, and Brandon Shapiro</i> </li>
+                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/2009.07302"> Partial evaluations and the compositional structure of the bar construction </a>, <i>  Carmen Constantin, Paolo Perrone, Tobias Fritz, and Brandon Shapiro</i> </li>
+                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/2105.04775"> Weak cartesian properties of simplicial sets </a>, <i>  Carmen Constantin, Tobias Fritz, Paolo Perrone,  and Brandon Shapiro</i> </li>
+
                 </ul>
 
                 <ul>
