--- a/2020.html
+++ b/2020.html
@@ -127,6 +127,12 @@
                         Associated reading: <a href="https://arxiv.org/abs/2009.06835"> Internal lenses as functors and cofunctors</a>, <i> Bryce Clarke </i>
                     </li>
                 </ul>
+              
+              <hr></hr>
+              <center> <p> Outcomes Following the Research Week </p> </center>
+                <ul>
+                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/2105.05422"> Limits and colimits in a category of lenses </a>, <i>  Emma Chollet, Bryce Clarke, Michael Johnson, Maurine Songa, Vincent Wang, and Gioele Zardini</i> </li>
+                </ul>
             </div>
         </div>
         <div class= "col-xl-6 ">
