EHN: Update 2021 page and photos

--- a/2020.html
+++ b/2020.html
@@ -133,7 +133,7 @@
               <hr></hr>
               <center> <p> Outcomes Following the Research Week </p> </center>
                 <ul>
-                    <li> <b> Publication: </b> <a href = "https://arxiv.org/abs/2105.05422"> Limits and colimits in a category of lenses </a>, <i>  Emma Chollet, Bryce Clarke, Michael Johnson, Maurine Songa, Vincent Wang, and Gioele Zardini</i> </li>
+                    <li><a href = "https://arxiv.org/abs/2105.05422"> Limits and colimits in a category of lenses</a>, <i>  Emma Chollet, Bryce Clarke, Michael Johnson, Maurine Songa, Vincent Wang, and Gioele Zardini</i> </li>
                 </ul>
             </div>
         </div>
@@ -203,6 +203,12 @@ This project is about categories of Petri nets. Petri nets are an extremely popu
                     <li>
                         Associated reading: <a href="https://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-225.pdf"> Categorical multirelations,linear logic and petri nets</a>, <i>Valeria de Paiva </i>
                     </li>
+                </ul>
+
+                <hr></hr>
+              <center> <p> Outcomes Following the Research Week </p> </center>
+                <ul>
+                    <li> <a href = "https://arxiv.org/abs/2105.12801"> Dialectica Petri nets</a>, <i>Elena Di Lavore, Wilmer Leal, Valeria de Paiva </i> </li>
                 </ul>
 
             </div>
