--- a/inclusivity.html
+++ b/inclusivity.html
@@ -35,6 +35,7 @@
                   <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
                   <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
                   <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                  <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -59,7 +60,6 @@
             <li> We are writing a grant to be able to fund needful students to attend the in-person research week </li>
             <li> In both components of the school, we will focus on the process of research instead of on the outcomes </li>
             <li> We are designing modules of the online component of the school that enable students to share their voices in a variety of modes </li>
-            <li> We will guide  participants to develop explicit norms for supportive and inclusive behavior </li>
             <li> We will moderate the whole-group discussions and written components to ensure they keep within School norms. </li>
         </ul>
     </p>
