--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
                   <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
                   <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
                   <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                  <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -66,9 +67,9 @@
                           <table>
                               <tr> <td><i>December </i></td> <td> applications open</td> </tr>
                               <tr> <td><i>February </i></td> <td> participants announced</td> </tr>
-                              <tr> <td><i>March - June </i></td> <td> Online Seminar</td> </tr>
-                              <tr> <td><i>July 5 - 9 </i></td> <td> in-person Research Week</td> </tr>
-                              <tr> <td><i>July 12 - 16 </i></td> <td> Applied Category Theory conference</td> </tr>
+                              <tr> <td><i>March - June </i></td> <td> online Learning Seminar</td> </tr>
+                              <tr> <td><i>July </i></td> <td> in-person Research Week</td> </tr>
+                              <tr> <td><i>July </i></td> <td> Applied Category Theory conference</td> </tr>
                           </table>
                       </center>
 
@@ -84,10 +85,10 @@
                   <div class="col-lg-8">
                       <h3> School Overview </h3>
                       <p>
-                          Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components --- an Online Seminar that meets regularly between February and June, and an in-person Research Week in Cambridge, UK on July 5 - 9.
+                          Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components: an online Learning Seminar that meets regularly between February and June, and an in-person Research Week held in the summer adjacent to the Applied Category Theory Conference.
                       </p>
                       <p>
-                          During the online seminar, we will read, discuss, and respond to papers chosen by the project mentors. Every other week, a pair of participants will present a paper which will be followed by a group discussion. Leading up to this presentation, study groups will meet to digest the reading in progress, and students will submit reading responses.  After the presentation, the presenters will summarize the paper into a blog post for  <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a>.
+                          During the learning seminar, we will read, discuss, and respond to papers chosen by the project mentors. Every other week, a pair of participants will present a paper which will be followed by a group discussion. Leading up to this presentation, study groups will meet to digest the reading in progress, and students will submit reading responses.  After the presentation, the presenters will summarize the paper into a blog post for  <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a>.
                       </p>
                       <p>
                           The in-person research week will be held the week prior to the International Conference on Applied Category Theory and in the same location. During the week, participants work intensively with their research group under the guidance of their mentor. Projects from the Adjoint School will be presented during this conference. Both components of the school aim to develop a sense of belonging and camaraderie in students so that they can fully participate in the conference, for example by attending talks and chatting with other conference goers.
@@ -97,10 +98,10 @@
                   <div class="col-lg-4 v-align">
                       <div class="row">
                           <div class="col-lg-12 col-sm-6">
-                                <img src="images/ACT-actionshot.jpg" class="rounded img-fluid"></img>
+                                <img src="images/2019-actionshot.jpg" class="rounded img-fluid"></img>
                             </div>
                             <div class="col-lg-12 col-sm-6">
-                                <img src="images/ACT-actionshot4.jpg" class="rounded img-fluid"></img>
+                                <img src="images/2018-actionshot2.jpg" class="rounded img-fluid"></img>
                             </div>
                         </div>
                   </div>
