--- a/apply.html
+++ b/apply.html
@@ -35,6 +35,7 @@
                   <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
                   <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
                   <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                  <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -68,7 +69,7 @@
             <p> We will consider advanced undergraduates, PhD students, post-docs, as well as people working outside of academia. Members of groups which are underrepresented in the mathematics and computer science communities are especially encouraged to apply.</p>
         </div>
         <div class="col-md-4 v-align">
-            <img src="images/ACT-actionshot5.jpg" class="rounded img-fluid"></img>
+            <img src="images/2018-actionshot3.jpg" class="rounded img-fluid"></img>
         </div>
     </div>
 
