--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
-        <a class="navbar-brand" href="index.html">The Adjoint School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apply.html">Apply</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
-
+      <a class="navbar-brand" href="index.html">The Adjoint School</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="apply.html">Apply</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+              <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+              <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+              <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
 
 
       <main role="main" class="container">
@@ -63,141 +63,12 @@
             </p>
         </div>
         <div class="col-lg-5 v-align">
-            <img src="images/ACT-actionshot3.jpg" class="rounded img-fluid"></img>
+            <img src="images/2018-actionshot.jpg" class="rounded img-fluid"></img>
         </div>
     </div>
 
     <hr></hr>
-    <section id = "2021">
-    <h2> The Adjoint School 2021</h2>
-    <p>The organizers of Adjoint School 2021 are David Jaz Myers and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</p>
-
-    </div>
-
-    <h3> Research Projects </h3>
-
-    <div class = "row">
-        <div class= "col-xl-6 ">
-            <div class = "past-proj">
-                <center>
-                    <h5> Categorical and computational aspects of C-sets </h5>
-                    <p> Mentors: <i>  James Fairbanks</i> and <i> Evan Patterson</i>
-                    <br> TAs: <i>Owen Lynch and Christian Williams </i></p>
-                </center>
-                <p>
-                    Applied category theory includes major threads of inquiry into monoidal categories and hypergraph categories for describing systems in terms of processes or networks of interacting components. Structured cospans are an important class of hypergraph categories. For example, Petri net-structured cospans are models of concurrent processes in chemistry, epidemiology, and computer science. When the structured cospans are given by C-sets (also known as co-presheaves), generic software can be implemented using the mathematics of functor categories. We will study mathematical and computational aspects of these categorical constructions, as well as applications to scientific computing.
-                </p>
-
-                <hr> </hr>
-                <center> <p> Associated Readings </p> </center>
-
-                <ul>
-                    <li> <a href = "https://arxiv.org/abs/1502.00872"> Decorated Cospans</a>. Fong </li>
-                    <li><a href = "https://arxiv.org/abs/1408.1598"> An algebra of open dynamical systems on the operad of wiring diagrams</a>. Vagner, Spivak, and Lerman</li>
-                </ul>
-
-
-            </div>
-        </div>
-        <div class= "col-xl-6 ">
-            <div class = "past-proj">
-                <center>
-                    <h5>The ubiquity of enriched profunctor nuclei </h5>
-                    <p> Mentor: <i> Simon Willerton </i>
-                    <br> TA: <i>Tai-Danae Bradley</i></p>
-                </center>
-                <p>
-                    In 1964, Isbell developed a nice universal embedding for metric spaces: the tight span. In 1966, Isbell developed a duality for presheaves. These are both closely related to enriched profunctor nuclei, but the connection wasn’t spotted for 40 years. Since then, many constructions in mathematics have been observed to be enriched profunctor nuclei too, such as the fuzzy/formal concept lattice, tropical convex hull, and the Legendre-Fenchel transform. 
-
-                    We’ll explore the world of enriched profunctor nuclei, perhaps seeking out further useful examples.
-                </p>
-
-                <hr> </hr>
-                <center> <p> Associate Readings </p> </center>
-
-                <ul>
-                    <li>
-                        <a href="http://arxiv.org/abs/1501.03791"> The Legendre-Fenchel transform from a category theoretic perspective</a>.   Willerton
-                    </li>
-                    <li>
-                      <a href="https://etheses.whiterose.ac.uk/18342/1/JAE%20thesis%20%28White%20Rose%29.pdf">  On the fuzzy concept complex (Chapters 2-3)</a>.   Elliott 
-                  </li>
-                </ul>
-
-
-            </div>
-        </div>
-    </div>
-
-    <div class = "row">
-      <div class= "col-xl-6 ">
-          <div class = "past-proj">
-            <center>
-                <h5> Double categories in applied category theory </h5>
-                <p> Mentor: <i> Simona Paoli </i></p>
-            </center>
-            <p>
-              Bicategories and double categories (and their symmetric monoidal versions) have recently featured in applied category theory: for instance, structured cospans and decorated cospans have been used to model several examples, such as electric circuits, Petri nets and chemical reaction networks.
-           </p>
-            <p>
-                  An approach to bicategories and double categories is available in higher category theory through models that do not require a direct checking of the coherence axioms, such as the Segal-type models. We aim to revisit the structures used in applications in the light of these approaches, in the hope to facilitate the construction of new examples of interest in applications.                
-            </p>
-            <hr> </hr>
-            <center> <p> Associate Readings </p> </center>
-              <ul>
-                  <li>
-                      <a href = "https://arxiv.org/abs/1911.04630"> Structured cospans</a>. Baez and Courser 
-                  </li>
-                  <li>
-                    <a href="http://www.tac.mta.ca/tac//volumes/28/27/28-27.pdf">  A double categorical model of weak 2-categories</a>.   Paoli and Pronk
-                </li>
-                <li>
-                  <a href="https://www.springer.com/gp/book/9783030056735"> Simplicial Methods for Higher Categories: Segal-type Models of Weak n-Categories</a>.   Paoli
-              </li>
-              </ul>
-          </div>
-      </div>
-
-      <div class= "col-xl-6 ">
-          <div class = "past-proj">
-              <center>
-                  <h5> Extensions of coalgebraic dynamic logic</h5>
-                  <p> Mentors: <i>Helle Hvid Hansen</i> and <i>Clemens Kupke</i></p>
-              </center>
-              <p>
-                  <p>
-                      Coalgebra is a branch of category theory in which different types of state-based systems are studied in a uniform framework, parametric in an endofunctor F:C -> C that specifies the system type. Many of the systems that arise in computer science, including deterministic/nondeterministic/weighted/probabilistic automata, labelled transition systems, Markov chains, Kripke models and neighbourhood structures, can be modeled as F-coalgebras. Once we recognise that a class of systems are coalgebras, we obtain general coalgebraic notions of morphism, bisimulation, coinduction and observable behaviour.
-                  </p>
-
-                  <p>Modal logics are well-known formalisms for specifying properties of state-based systems, and one of the central contributions of coalgebra has been to show that modal logics for coalgebras can be developed in the general parametric setting, and many results can be proved at the abstract level of coalgebras. This area is called coalgebraic modal logic.
-                  </p>
-
-                  <p>
-                      In this project, we will focus on coalgebraic dynamic logic, a coalgebraic framework that encompasses Propositional Dynamic Logic (PDL) and Parikh's Game Logic. The aim is to extend coalgebraic dynamic logic to system types with probabilities. As a concrete starting point, we aim to give a coalgebraic account of stochastic game logic, and apply the coalgebraic framework to prove new expressiveness and completeness results.
-                  </p>
-                  <p>Participants in this project would ideally have some prior knowledge of modal logic and PDL, as well as some familiarity with monads.
-                  </p> 
-              </p>
-
-              <hr> </hr>
-              <center> <p> Associated Readings </p> </center>
-              Parts of:
-              <ul>
-                  <li>
-                      <a href = "https://www.sciencedirect.com/science/article/pii/S0304397500000566"> Universal coalgebra: A theory of systems</a>. Rutten
-                  </li>
-                  <li>
-                      <a href = "https://www.sciencedirect.com/science/article/pii/S0304397511003215"> Coalgebraic semantics of modal logics: an overview</a>. Kupke and Pattinson
-                  </li>
-                  <li>
-                    <a href = "https://link.springer.com/chapter/10.1007/978-3-662-44602-7_22"> Strong completeness of iteration-free coalgebraic dynamic logics</a>.  Hansen, Kupke, and Leale
-                </li>
-              </ul>
-
-          </div>
-      </div>
-  </div>
-</section>
+    
 
 
 
