update the role expectations and add 2022 information

--- a/apply.html
+++ b/apply.html
@@ -49,8 +49,8 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
+    <p>Applications for the 2022 Adjoint School will open soon!</p>
 
-    <p>Applications for the 2021 Adjoint School are now closed! We will be in touch with all applicants by the end of February.</p>
     <!-- <h3>Information regarding the letter of reference.</h3>
     <p>If you are applying, please have sent on your behalf to actadjointschool@gmail.com a brief letter of recommendation confirming any of the following:
       <ul>
