--- a/inclusivity.html
+++ b/inclusivity.html
@@ -49,7 +49,7 @@
 
     <h1>Inclusivity and Values</h1>
 
-    <p> As a touchstone, we adopt this <a href = "http://eugeniacheng.com/inclusivity/">Manifesto of Inclusivity</a> and commit to creating a School and application process that welcomes anybody interested in applied category theory.  </p>
+    <p> As a touchstone, we adopt this <a href = "http://eugeniacheng.com/inclusivity/">Manifesto of Inclusivity</a> and commit to creating a school and application process that welcomes anybody interested in applied category theory.  </p>
 
     <hr></hr>
 
@@ -59,8 +59,8 @@
         <ul>
             <li> We are writing a grant to be able to fund needful students to attend the in-person research week </li>
             <li> In both components of the school, we will focus on the process of research instead of on the outcomes </li>
-            <li> We are designing modules of the online component of the school that enable students to share their voices in a variety of modes </li>
-            <li> We will moderate the whole-group discussions and written components to ensure they keep within School norms. </li>
+            <li> We are designing modules of the learning seminar that enable students to share their voices in a variety of modes </li>
+            <li> We will moderate the whole-group discussions and written components to ensure they keep within school norms. </li>
         </ul>
     </p>
 
