--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 
     <hr></hr>
     
+    <h2>The Adjoint School 2022</h2>
 
+    <p>The organizers of the Adjoint School 2022 are Angeline Aguinaldo, Elena Di Lavore, David Jaz Myers, and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</p>
 
 
 </main>
