update the role expectations

--- a/about.html
+++ b/about.html
@@ -114,63 +114,65 @@
               <div class="row">
                     <div class="col-lg-12 past-proj">
                       <h5> For Mentors </h5>
-                      <p> The Mentor for each group chooses an open research problem and leads the group during the in-person Research Week.</p>
-                      <p> <i>Expectations for Mentors:</i> Choose a project topic and 2 relevant readings. Lead the group during the 5-day Research Week. </p>
+                      <p> The mentor leads a group of four students to study and research an open problem in applied category theory.</p>
+                      <p> <i>Expectations for Mentors:</i> </p>
+                      <ul> 
+                          <li> Choose a research project topic </li>
+                          <li> Select 2 relevant readings with consideration for the academic diversity of the students</li>
+                          <li> Attend the research week in-person (COVID dependent)</li> 
+                          <li> Be fully present and active during the research week</li>
+                      </ul>
 
                         <p>Mentors may optionally:</p> 
                         <ul>
-                            <li> select a TA</li>
-                            <li> host one or more preparation calls with the group prior to the Research week</li>
-                            <li> lead the group to publish a paper following the Research Week</li>
+                            <li> Select a TA</li>
+                            <li> Meet with their group’s students through the learning seminar</li>
+                            <li> Attend student presentations during the learning seminar</li>
+                            <li> Lead the group to continue research or publish a paper following the research week</li>
                         </ul>
                     </li>
                       </ul>
                   </div>
                     <div class="col-lg-12 past-proj">
                       <h5> For TAs </h5>
-                      <p> The TA for each group guides the groups' students during the Online Seminar and assists the Mentor during the Research Week.</p>
+                      <p> The TA for each group guides the groups' students during the learning seminar and assists the mentor during the research week.</p>
                       <p> <i>Expectations for TAs:</i></p>
                       <ul>
-                          <li> During the Online Seminar:
+                          <li> During the learning seminar:
                               <ul>
-                                  <li> support the two pairs of students in developing their presentation and blog post by checking-in frequently, answering technical questions, and providing feedback </li>
-                                  <li> attend the presentations given by your students</li>
+                                  <li> Support the two pairs of students in developing their presentation and blog post by checking-in frequently, answering technical questions, and providing feedback </li>
+                                  <li> Attend the presentations given by your students</li>
                               </ul>
                           </li>
-                          <li> During the Research Week:
+                          <li> During the research week:
                               <ul>
-                                  <li>support the group during the working sessions, under the guidance of the Mentor</li>
+                                  <li>Support the group during the working sessions, under the guidance of the mentor</li>
                               </ul>
                           </li>
                       </ul>
                   </div>
                     <div class="col-lg-12 past-proj">
                       <h5> For Participants </h5>
-                      <p> The participants develop the skills of research during the Online Seminar by reading, presenting, and writing supported by frequent discussions and reflections. During the Research Week they work intensively on a research project under the guidance of their project’s Mentor.</p>
+                      <p> The participants develop the skills of research during the learning seminar by reading, presenting, and writing supported by frequent discussions and reflections. During the research week they work intensively on a research project under the guidance of their project’s mentor.</p>
                       <p> <i>Expectations for Participants:</i></p>
                       <ul>
-                          <li> During the Online Seminar:
+                          <li> During the learning seminar (~16 weeks):
                               <ul>
-                              <li> Each two weeks (repeated 8 times):
-                                  <ul>
-                                      <li>read an assigned paper</li>
-                                      <li> meet for 30 minutes in small groups to digest the reading (during the first of the two weeks) </li>
-                                      <li> write a reading response to the paper (before the presentation in the second week) </li>
-                                      <li> attend a presentation on the reading (during the second of the two weeks) </li>
-                                      <li> comment on the associated blog post </li>
-                                  </ul>
-                              </li>
-                              <li> For your presentation week, with your partner:
-                                  <ul>
-                                      <li>give a 40 minute presentation on your assigned reading</li>
-                                      <li> write a blog post to be posted on the <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a></li>
-                                  </ul>
-                              </li>
-                          </ul>
-                          </li>
-                          <li> During the Research Week:
+                                <li> Read 1 assigned paper every two weeks </li>
+                                <li> Write a short reading response to each paper prior to its presentation</li> 
+                                <li> Meet with the whole school bi-weekly to attend student presentations and discuss the assigned paper </li>
+                                <li> For the paper you are responsible for presenting (1 time during the learning seminar), collaborate with your subgroup to 
+                                    <ul> 
+                                        <li> Give a presentation on the assigned reading</li>
+                                        <li> Write a blog post to be posted on the <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a> </li>
+                                    </ul>
+                                </li>
+                                <li> (optionally) Participate in group meetings throughout the learning seminar.</li>
+                                </ul>
+                            </li>
+                          <li> During the research week:
                               <ul>
-                                  <li>be present and engaged in research with your group</li>
+                                  <li>Be present and engaged in research with your group whether hybrid or in-person</li>
                               </ul>
                           </li>
                       </ul>
