--- a/about.html
+++ b/about.html
@@ -85,14 +85,16 @@
                   <div class="col-lg-8">
                       <h3> School Overview </h3>
                       <p>
-                          Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components: an online Learning Seminar that meets regularly between February and June, and an in-person Research Week held in the summer adjacent to the Applied Category Theory Conference.
+                          Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components: an online learning seminar that meets regularly between February and June, and an in-person research week held in the summer adjacent to the Applied Category Theory Conference.
                       </p>
                       <p>
-                          During the learning seminar, we will read, discuss, and respond to papers chosen by the project mentors. Every other week, a pair of participants will present a paper which will be followed by a group discussion. Leading up to this presentation, study groups will meet to digest the reading in progress, and students will submit reading responses.  After the presentation, the presenters will summarize the paper into a blog post for  <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a>.
+                          During the learning seminar, we will read, discuss, and respond to papers chosen by the project mentors. Every other week, a pair of participants will present a paper which will be followed by a group discussion. Leading up to this presentation,  each student will write a reading responses.  After the presentation, the presenters will write a blog post for <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a> based on the paper.
                       </p>
                       <p>
                           The in-person research week will be held the week prior to the International Conference on Applied Category Theory and in the same location. During the week, participants work intensively with their research group under the guidance of their mentor. Projects from the Adjoint School will be presented during this conference. Both components of the school aim to develop a sense of belonging and camaraderie in students so that they can fully participate in the conference, for example by attending talks and chatting with other conference goers.
                       </p>
+
+                      <p> This <a href = "assets/Example Adjoint School Syllabus.pdf">example Adjoint School syllabus</a> may help you understand the structure of the school.</p>
 
                   </div>
                   <div class="col-lg-4 v-align">
