Add current students tab

--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="apply.html">Apply</a>
               </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="current.html">Current Students</a>
+                </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -78,7 +81,7 @@
 
               </div>
               <hr></hr>
-              
+
               <div class="row">
 
 
@@ -118,14 +121,14 @@
                       <h5> For Mentors </h5>
                       <p> The mentor leads a group of four students to study and research an open problem in applied category theory.</p>
                       <p> <i>Expectations for Mentors:</i> </p>
-                      <ul> 
+                      <ul>
                           <li> Choose a research project topic </li>
                           <li> Select 2 relevant readings with consideration for the academic diversity of the students</li>
-                          <li> Attend the research week in-person (COVID dependent)</li> 
+                          <li> Attend the research week in-person (COVID dependent)</li>
                           <li> Be fully present and active during the research week</li>
                       </ul>
 
-                        <p>Mentors may optionally:</p> 
+                        <p>Mentors may optionally:</p>
                         <ul>
                             <li> Select a TA</li>
                             <li> Meet with their group’s students during the learning seminar</li>
@@ -161,10 +164,10 @@
                           <li> During the learning seminar (~16 weeks):
                               <ul>
                                 <li> Read 1 assigned paper every two weeks </li>
-                                <li> Write a short reading response to each paper prior to its presentation</li> 
+                                <li> Write a short reading response to each paper prior to its presentation</li>
                                 <li> Meet with the whole school bi-weekly to attend student presentations and discuss the assigned paper </li>
-                                <li> For the paper you are responsible for presenting (1 time during the learning seminar), collaborate with your subgroup to 
-                                    <ul> 
+                                <li> For the paper you are responsible for presenting (1 time during the learning seminar), collaborate with your subgroup to
+                                    <ul>
                                         <li> Give a presentation on the assigned reading</li>
                                         <li> Write a blog post to be posted on the <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a> </li>
                                     </ul>
