--- a/2018.html
+++ b/2018.html
@@ -29,34 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="apply.html">Apply</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-                  <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-              </li>
-            </ul>
-          </div>
-      </nav><nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
-          <a class="navbar-brand" href="index.html">The Adjoint School</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="apply.html">Apply</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="current.html">Current Students</a>
+                </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -72,8 +47,6 @@
             </ul>
           </div>
       </nav>
-
-
 
       <main role="main" class="container">
 
