--- a/apply.html
+++ b/apply.html
@@ -29,6 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="apply.html">Apply</a>
               </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="current.html">Current Students</a>
+                </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
