--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
+
       <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="apply.html">Apply</a>
           </li>
+            <li class="nav-item">
+                <a class="nav-link" href="current.html">Current Students</a>
+            </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
