Update landing page to point to About page and add announcements section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <li> grow and strengthen the applied category theory community</li>
                 </ul>
             </p>
+            <p>To learn more about the school, please visit the <a href="about.html">About</a> page.</p>
         </div>
         <div class="col-lg-5 v-align">
             <img src="images/2018-actionshot.jpg" class="rounded img-fluid"></img>
@@ -71,10 +72,13 @@
     </div>
 
     <hr></hr>
-    
-    <h2>The Adjoint School 2022</h2>
 
-    <p>The organizers of the Adjoint School 2022 are Angeline Aguinaldo, Elena Di Lavore, David Jaz Myers, and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</p>
+    <h3>Announcements</h3>
+          <ul>
+              <li>The organizers of the <strong>Adjoint School 2022</strong> are Angeline Aguinaldo, Elena Di Lavore, David Jaz Myers, and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</li>
+          </ul>
+
+          </div>
 
 
 </main>
