--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <h3>Announcements</h3>
           <ul>
-              <li>The organizers of the <strong>Adjoint School 2022</strong> are Angeline Aguinaldo, Elena Di Lavore, David Jaz Myers, and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</li>
+              <li><i>Sep 29, 2021</i>. The organizers of the <strong>Adjoint School 2022</strong> are Angeline Aguinaldo, Elena Di Lavore, David Jaz Myers, and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</li>
           </ul>
 
           </div>
