--- a/papers.html
+++ b/papers.html
@@ -56,6 +56,23 @@
     <h1>Blog posts</h1>
     <div id="blogposts"></div>
 
+    <h1>Papers</h1>
+    <div id="papers">
+        <ul>
+            <li>Lavore, Elena Di, Wilmer Leal and Valeria de Paiva. “Dialectica Petri nets.” ArXiv abs/2105.12801 (2021).</li>
+            <li>Chollet, Emma, Bryce Clarke, Michael Johnson, M. Songa, Vincent Wang and G. Zardini. “Limits and colimits in a category of lenses.” (2021).</li>
+            <li>Constantin, Carmen M., Tobias Fritz, Paolo Perrone and Brandon Shapiro. “Weak cartesian properties of simplicial sets.” (2021).</li>
+            <li>Constantin, Carmen M., Paolo Perrone, Tobias Fritz and Brandon Shapiro. “Partial Evaluations and the Compositional Structure of the Bar Construction.” arXiv: Category Theory (2020).</li>
+            <li>Backens, Miriam, Hector Miller-Bakewell, Giovanni de Felice, Leo Lobski and John van de Wetering. “There and back again: A circuit extraction tale.” Quantum 5 (2021): 421.</li>
+            <li>Clarke, Bryce, Derek Elkins, Jeremy Gibbons, Fosco Loregiàn, Bartosz Milewski, Emily Pillmore and Mario Rom'an. “Profunctor optics, a categorical update.” ArXiv abs/2001.07488 (2020).</li>
+            <li>Shiebler, Dan, Alexis Toumi and Mehrnoosh Sadrzadeh. “Incremental Monoidal Grammars.” ArXiv abs/2001.02296 (2020).</li>
+            <li>McPheat, Lachlan, Mehrnoosh Sadrzadeh, Hadi Wazni and Gijs Jasper Wijnholds. “Categorical Vector Space Semantics for Lambek Calculus with a Relevant Modality.” ACT (2020).</li>
+            <li>Fong, Brendan and Maru Sarazola. “A recipe for black box functors.” arXiv: Category Theory (2018).</li>
+            <li>Baez, John C., Blake S. Pollard, Jonathan Lorand and Maru Sarazola. “Biochemical Coupling Through Emergent Conservation Laws.” arXiv: Molecular Networks (2018).</li>
+            <li>Bradley, Tai-Danae, Martha Lewis, Jade Master and Brad Theilman. “Translating and Evolving: Towards a Model of Language Change in DisCoCat.” CAPNS@QI (2018).</li>
+        </ul>
+    </div>
+
 
 </main>
 <!-- Optional JavaScript -->
