--- a/2021.html
+++ b/2021.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="apply.html">Apply</a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="current.html">Current Students</a>
+                    <a class="nav-link" href="inclusivity.html">Inclusivity</a>
                 </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
@@ -40,9 +40,12 @@
                   <a class="dropdown-item" href="2021.html">Adjoint School 2021</a>
                 </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="papers.html">Papers & Blogposts</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="current.html">For Students</a>
+                </li>
             </ul>
           </div>
       </nav>
