--- a/current.html
+++ b/current.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="apply.html">Apply</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="current.html">Current Students</a>
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
@@ -43,7 +43,10 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+                <a class="nav-link" href="papers.html">Papers & Blogposts</a>
+            </li>
+            <li>
+                <a class="nav-link" href="current.html">For Students</a>
             </li>
         </ul>
     </div>
@@ -54,6 +57,8 @@
 
 
     <h4>Coming Soon</h4>
+    <iframe src="assets/Example Adjoint School Syllabus.pdf" width="100%" height="600px">
+    </iframe>
 
 </main>
 <!-- Optional JavaScript -->
