fixed type associate -- associated

--- a/2021.html
+++ b/2021.html
@@ -147,7 +147,7 @@
                   An approach to bicategories and double categories is available in higher category theory through models that do not require a direct checking of the coherence axioms, such as the Segal-type models. We aim to revisit the structures used in applications in the light of these approaches, in the hope to facilitate the construction of new examples of interest in applications.
             </p>
             <hr> </hr>
-            <center> <p> Associate Readings </p> </center>
+            <center> <p> Associated Readings </p> </center>
               <ul>
                   <li>
                       <a href = "https://arxiv.org/abs/1911.04630"> Structured cospans</a>. Baez and Courser
