--- a/about.html
+++ b/about.html
@@ -72,10 +72,10 @@
                         <center>
                           <table>
                               <tr> <td><i>December </i></td> <td> applications open</td> </tr>
-                              <tr> <td><i>January </i></td> <td> participants announced</td> </tr>
+                              <tr> <td><i>February</i></td> <td> participants announced</td> </tr>
                               <tr> <td><i>February - June </i></td> <td> online learning seminar</td> </tr>
-                              <tr> <td><i>July </i></td> <td> in-person research week</td> </tr>
-                              <tr> <td><i>July </i></td> <td> Applied Category Theory conference</td> </tr>
+                              <tr> <td><i>July 11 - 15</i></td> <td> in-person research week </td> </tr>
+                              <tr> <td><i>July 18 - 22</i></td> <td> Applied Category Theory conference</td> </tr>
                           </table>
                       </center>
 
