updated the apply page with a link to the pre-application form

--- a/apply.html
+++ b/apply.html
@@ -55,7 +55,11 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2022 Adjoint School will open soon!</p>
+    <p>Applications for the 2022 Adjoint School are open until January 29 11:59, anywhere on earth.</p>
+
+    <p> To apply for the Adjoint School, fill out the following pre-application form to declare your intent to apply: <a href="https://forms.gle/dV5JsMusr5zmU81AA">Pre-application Form.</a></p>
+
+    <p>After you fill out your pre-application, you will recieve an email with further instructions. This email will include the application form, as well as a reference form which you should send to a person who is willing to write a letter of reference on your behalf.</p>
 
     <!-- <h3>Information regarding the letter of reference.</h3>
     <p>If you are applying, please have sent on your behalf to actadjointschool@gmail.com a brief letter of recommendation confirming any of the following:
