--- a/2019.html
+++ b/2019.html
@@ -44,7 +44,7 @@
                     <a class="nav-link" href="papers.html">Papers & Blogposts</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="current.html">For Students</a>
+                  <a class="nav-link" href="2022.html">Adjoint School 2022</a>
                 </li>
             </ul>
           </div>
