--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="papers.html">Papers & Blogposts</a>
             </li>
             <li>
-                <a class="nav-link" href="current.html">For Students</a>
+                <a class="nav-link" href="2022.html">Adjoint School 2022</a>
             </li>
         </ul>
       </div>
@@ -78,6 +78,7 @@
 
     <h3>Announcements</h3>
           <ul>
+              <li><i>Dec 28, 2021</i>. Check out the project descriptions for the 2022 Adjoint School <a href="2022.html">here</a>
               <li><i> Dec 12, 2021</i>. The in-person research week for the 2022 Adjoint School will be held on July 11 - 15 at the University of Strathclyde in Glasgow, Scotland. We are assembling a great team of mentors and expect to open applications at the end of December or beginning of January.</li> 
               <li><i>Sep 29, 2021</i>. The organizers of the <strong>Adjoint School 2022</strong> are Angeline Aguinaldo, Elena Di Lavore, David Jaz Myers, and Sophie Libkind. The steering committee consists of Daniel Cicala and Brendan Fong.</li>
           </ul>
