updated the apply page with a link to the pre-application form new date

--- a/apply.html
+++ b/apply.html
@@ -55,7 +55,7 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2022 Adjoint School are open until January 29 11:59, anywhere on earth.</p>
+    <p>Applications for the 2022 Adjoint School are open until January 29, 2022, 23:59 anywhere on earth.</p>
 
     <p> To apply for the Adjoint School, fill out the following pre-application form to declare your intent to apply: <a href="https://forms.gle/dV5JsMusr5zmU81AA">Pre-application Form.</a></p>
 
