update application instructions

--- a/2022.html
+++ b/2022.html
@@ -66,8 +66,8 @@
   <h5> Important Dates </h5>
   <p>
     <ul>
-      <li><i>January 29, 2022</i>: Application Due</li>
-      <li><i>July 11 - 15, 2022</i>: Research Week at  the University of Strathclyde in Glasgow, Scotland </li>
+      <li><i>January 29, 2022</i>. Application Due</li>
+      <li><i>July 11 - 15, 2022</i>. Research Week at  the University of Strathclyde in Glasgow, Scotland </li>
     </ul>
   </p>
 
