--- a/apply.html
+++ b/apply.html
@@ -55,21 +55,20 @@
       <main role="main" class="container">
 
     <h1>Apply</h1>
-    <p>Applications for the 2022 Adjoint School are open until January 29, 2022, 23:59 anywhere on earth.</p>
+    <p>Applications for the 2022 Adjoint School are open until <b>January 29, 2022</b>, 23:59 anywhere on earth. Learn about the projects for the 2022 Adjoint School <a href="2022.html">here</a>.</p>
 
-    <p> To apply for the Adjoint School, fill out the following pre-application form to declare your intent to apply: <a href="https://forms.gle/dV5JsMusr5zmU81AA">Pre-application Form.</a></p>
+    <h3> Application Process </h3>
 
-    <p>After you fill out your pre-application, you will recieve an email with further instructions. This email will include the application form, as well as a reference form which you should send to a person who is willing to write a letter of reference on your behalf.</p>
+    <p> To begin the application process, fill out the following pre-application form to declare your intent to apply: <a href="https://forms.gle/dV5JsMusr5zmU81AA">pre-application form</a>.</p>
 
-    <!-- <h3>Information regarding the letter of reference.</h3>
-    <p>If you are applying, please have sent on your behalf to actadjointschool@gmail.com a brief letter of recommendation confirming any of the following:
-      <ul>
-        <li> Your background</li>
-        <li> The ACT School's relevance to your research or career</li>
-        <li> Your research or career experience</li>
-      </ul>
-     If your reference letter won't arrive by the deadline, please have it sent in as soon as possible for the best chance of it being available when decisions are made, and send us contact information for your referee.
-     </p>  -->
+    <p>After you fill out your pre-application, you will recieve an email with further instructions. This email will include
+      <ol>
+        <li>the application form</li> 
+        <li> a reference form which you should send to a person who is willing to write a letter of reference on your behalf</li>
+      </ol>
+    The letter of recommendation should confirm any of the following: your background, the ACT School's relevance to your research or career, or your research or career experience.
+     </p> 
+
     <hr></hr>
     <div class="row">
 
