--- a/2022.html
+++ b/2022.html
@@ -67,6 +67,7 @@
   <p>
     <ul>
       <li><i>January 29, 2022</i>. Application Due</li>
+      <li><i>February - June, 2022</i>. Learning Seminar</li>
       <li><i>July 11 - 15, 2022</i>. Research Week at  the University of Strathclyde in Glasgow, Scotland </li>
     </ul>
   </p>
@@ -130,7 +131,7 @@
     <div class= "col-xl-6 ">
       <div class = "past-proj">
         <center>
-            <h5> TBD</h5>
+            <h5> A Compositional Theory of Timed and Probabilistic Process: CospanSpan(Graph)</h5>
             <p><i>Mentor:</i>  Nicoletta Sabadini
             <!-- <br> <i>TA: </i>  -->
             <!-- <br> <i>Students:</i>  -->
@@ -138,7 +139,7 @@
         </center>
         <hr></hr>
             <p>
-                TBD
+                Project description and readings coming soon!
             </p>
         <!-- <p> Readings</p>
         <ul>
@@ -159,15 +160,15 @@
     <div class= "col-xl-6 ">
       <div class = "past-proj">
         <center>
-            <h5> TBD</h5>
-            <p><i>Mentors:</i>  Filippo Bonchi
+            <h5> Algebraic Structures in Logic and Relations</h5>
+            <p><i>Mentor:</i>  Filippo Bonchi
             <!-- <br> <i>TA: </i>  -->
             <!-- <br> <i>Students:</i>  -->
             </p>
         </center>
         <hr></hr>
             <p>
-              TBD
+              Project description and readings coming soon!
             </p>
     
         <!-- <p> Readings</p>
