--- a/apply.html
+++ b/apply.html
@@ -59,15 +59,19 @@
 
     <h3> Application Process </h3>
 
-    <p> To begin the application process, fill out the following pre-application form to declare your intent to apply: <a href="https://forms.gle/dV5JsMusr5zmU81AA">pre-application form</a>.</p>
+    <p> To begin the application process, fill out the following pre-application form to receive the application materials: <a href="https://forms.gle/dV5JsMusr5zmU81AA">pre-application form</a>.</p>
 
     <p>After you fill out your pre-application, you will recieve an email with further instructions. This email will include
       <ol>
         <li>the application form</li> 
         <li> a reference form which you should send to a person who is willing to write a letter of reference on your behalf</li>
       </ol>
-    The letter of recommendation should confirm any of the following: your background, the ACT School's relevance to your research or career, or your research or career experience.
+    The letter of reference should confirm any of the following: your background, the ACT School's relevance to your research or career, or your research or career experience.
      </p> 
+
+     <p> If you have any questions, contact the organizers of the Adjoint School by emailing <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
+
+
 
     <hr></hr>
     <div class="row">
